# Job_Scraper

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  scraper.py
backend/app/api/: routes_jobs.py  routes_scrape.py  routes_stats.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: jobs.py
backend/app/repositories/: jobs.py
backend/app/schemas/: job.py  scrape.py  stats.py
backend/app/services/: scrape_service.py
backend/tests/: test_scraper.py  test_stats.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.vue  api.ts
