[project]
name = "job-scraper-backend"
version = "0.1.0"
description = "Job listings scraper and dashboard backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.1",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
